--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: sans-serif;
 }
+
 nav img{
     width: 150px;
 }
@@ -11,11 +12,13 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px 25px;
-    background-color: #004274;
+    padding: 15px 120px;
+    /* background-color: #004274; */
+    background-color: #FFFFFF;
     height: 11vh;
-    position: fixed;
+    position: relative;
     width: 100%;
+    box-shadow: 5px 0px 0px 0px blue;
 }
 .nav-links{
     flex: 1;
@@ -33,12 +36,11 @@ nav{
 }
 .nav-links ul li a{
     text-decoration: none;
-    color: #fff;
+    color: #000;
     font-size: 16px;
 }
 nav .fa-solid{
     display: none;
-    color: #fff;
     font-size: 20px;
     position: relative;
 }
@@ -49,10 +51,11 @@ nav .fa-solid{
 }
 .search input{
     width: 220px;
-    height: 30px;
+    height: 36px;
     outline: none;
-    border-radius: 20px;
+    border-radius: 2px;
     border: none;
+    border: 2px solid #d4d3d3;
 }
 .search button{
     width: 80px;
@@ -64,12 +67,101 @@ nav .fa-solid{
     padding: 2px;
 }
 
+/* home css */
+.big-box{
+    width: 100%;
+    height: 90vh;
+    /* border: 2px solid red; */
+    /* margin-top: 0px; */
+    background-color: #F4F9FC;
+    position: relative;
+}
+ .big-box .box-1{
+    position: absolute;
+    top: 35%;
+    left: 15%;
+    /* border: 2px solid red; */
+ }
+ .big-box .box-1 h1{
+    font-size: 50px;
+    line-height: 50px;
+    font-weight: 600;
+    line-height: 65px;
+ }
+ .big-box .box-1 p{
+    color: rgb(103, 103, 103);
+    font-size: 18px;
+    margin-top: 15px;
+    line-height: 30px;
+ }
+ .big-box .box-1 button{
+    width: 60px;
+    height: 60px;
+    background-color: black;
+    margin-top: 25px;
+    border-radius: 50%;
+
+ }
+ .big-box .box-1 button i{
+    color: #fff;
+ }
+ .big-box .box-2{
+   height: 430px;
+   width: 380px;
+   background-color: #0060FF;
+   position: absolute;
+   /* transform: rotate(45deg); */
+   transform: rotate(-12deg);
+   top: 20%;
+   right: 12%;
+   z-index: 1;
+   border-radius: 20px;
+   transition: .4s;
+   
+ }
+
+ .big-box .box-2:hover{
+    transform: rotate(12deg);
+    transition: .4s;
+ }
+ .big-box .box-2 .img-box{
+    width: 380px;
+    height: 430px;
+    position: relative;
+    /* transform: rotate(-45deg); */
+    transform: rotate(12deg);
+    z-index: 2;
+    border-radius: 10px;
+    transition: .4s;
+ }
+ .big-box .box-2 .img-box:hover{
+    transform: rotate(-15deg);
+    transition: .4s;
+ }
+ .box-2 .img-box img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    border-radius: 20px;
+ }
+
+
+
+/* responsive navbar css */
 @media (max-width:700px) {
+
+    nav img{
+      margin-left: -100px;
+    }
     nav .fa-solid{
         display: block;
+        color: #000;
     }
     .nav-links{
         display: block;
+        color: #000;
     }
     .nav-links ul{
         margin-top: 100px;
@@ -77,6 +169,9 @@ nav .fa-solid{
     }
     .nav-links ul li{
         display: block;
+    }
+    .nav-links ul li a{
+        color: #fff;
     }
     .nav-links{
         position: fixed;
@@ -107,7 +202,46 @@ nav .fa-solid{
     .search{
         display: none;
     }
+    .big-box{
+        width: 100%;
+    }
 
+    .box-2{
+        display: none;
+    }
+    .box-1{
+       margin-top: -130px;
+       margin-right: 50px;
+      
+    }
+
+
+
+
+    .big-box{
+       
+   
+      
+    }
+     .big-box .box-1{
+     
+     }
+     .big-box .box-1 h1{
+        font-size: 40px;
+        margin-left: -25px;
+        margin-top: 20px;
+       
+     }
+     .big-box .box-1 p{
+        font-size: 16px;
+        color: #7a8595;
+        margin-left: -25px;
+        margin-top: 20px;
+        line-height: 30px;
+     }
+     .big-box .box-1 button{
+        margin-left: -10px;
+     }
     
     
 }
